Upgraded all projects to .Net 4.7.2 Updated WSC and STS certificate on all projects Fixed IIS ekspres issue in WscBootstrapExample.

--- a/Examples/Digst.OioIdws.Java/Digst.OioIdws.DotnetWscJavaWspExampleConfByCode/App.config
+++ b/Examples/Digst.OioIdws.Java/Digst.OioIdws.DotnetWscJavaWspExampleConfByCode/App.config
@@ -1,46 +1,35 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <!-- Minimum needed for logging and STS (BEGIN) -->
   <configSections>
-    <section name="oioIdwsWcfConfiguration"
-             type="Digst.OioIdws.Wsc.OioWsTrust.Configuration, Digst.OioIdws.Wsc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
-    <section name="oioIdwsLoggingConfiguration"
-             type="Digst.OioIdws.Common.Logging.Configuration, Digst.OioIdws.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
-    <section name="log4net"
-             type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="oioIdwsWcfConfiguration" type="Digst.OioIdws.Wsc.OioWsTrust.Configuration, Digst.OioIdws.Wsc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
+    <section name="oioIdwsLoggingConfiguration" type="Digst.OioIdws.Common.Logging.Configuration, Digst.OioIdws.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
   <system.diagnostics>
     <sources>
-      <source propagateActivity="false"
-              name="System.ServiceModel"
-              logKnownPii="true"
-              switchValue="Verbose">
+      <source propagateActivity="false" name="System.ServiceModel" logKnownPii="true" switchValue="Verbose">
         <listeners>
           <add name="ServiceModelMessageLoggingListener">
             <filter type=""/>
           </add>
         </listeners>
       </source>
-      <source name="System.ServiceModel.MessageLogging"
-              logKnownPii="true"
-              switchValue="Verbose">
+      <source name="System.ServiceModel.MessageLogging" logKnownPii="true" switchValue="Verbose">
         <listeners>
           <add name="ServiceModelMessageLoggingListener">
             <filter type=""/>
           </add>
         </listeners>
       </source>
-      <source name="System.IdentityModel"
-              logKnownPii="true"
-              switchValue="Verbose">
+      <source name="System.IdentityModel" logKnownPii="true" switchValue="Verbose">
         <listeners>
           <add name="ServiceModelMessageLoggingListener">
             <filter type=""/>
           </add>
         </listeners>
       </source>
-      <source name="Digst.OioIdws"
-              switchValue="Information">
+      <source name="Digst.OioIdws" switchValue="Information">
         <listeners>
           <add name="ServiceModelMessageLoggingListener">
             <filter type=""/>
@@ -49,28 +38,16 @@
       </source>
     </sources>
     <sharedListeners>
-      <add initializeData="C:\temp\Digst.OioIdws.DotnetWscJavaWspExampleConfByCode.svclog"
-           type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-           name="ServiceModelMessageLoggingListener"
-           traceOutputOptions="Timestamp">
+      <add initializeData="C:\temp\Digst.OioIdws.DotnetWscJavaWspExampleConfByCode.svclog" type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp">
         <filter type=""/>
       </add>
     </sharedListeners>
   </system.diagnostics>
   <!--<oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.oioidws-net.dk">-->
-  <oioIdwsWcfConfiguration debugMode="true"
-                           stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc"
-                           tokenLifeTimeInMinutes="5"
-                           wspEndpointID="https://wsp.itcrew.dk">
-    <!--<clientCertificate findValue="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>-->
-    <clientCertificate findValue="96A26BF6E07DE6DB74E356472CCA4776FEC9B0DA"
-                       storeLocation="LocalMachine"
-                       storeName="My"
-                       x509FindType="FindByThumbprint"/>
-    <stsCertificate findValue="D9F10C97AA647727ADB64A349BB037C5C23C9A7A"
-                    storeLocation="LocalMachine"
-                    storeName="My"
-                    x509FindType="FindByThumbprint"/>
+  <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.itcrew.dk">
+    <!--<clientCertificate findValue="a402bb172929ae0d0ada62f6864329c35dc29483" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>-->
+    <clientCertificate findValue="96A26BF6E07DE6DB74E356472CCA4776FEC9B0DA" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <stsCertificate findValue="fcb5edc9fb09cf39716c09c35fdc883bd48add8d" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
   </oioIdwsWcfConfiguration>
   <oioIdwsLoggingConfiguration logger="Digst.OioIdws.DotnetWscJavaWspExampleConfByCode.Log4NetLogger, Digst.OioIdws.DotnetWscJavaWspExampleConfByCode"/>
   <log4net>
@@ -90,16 +67,12 @@
   </log4net>
   <system.serviceModel>
     <diagnostics>
-      <messageLogging logKnownPii="true"
-                      logEntireMessage="true"
-                      logMalformedMessages="true"
-                      logMessagesAtServiceLevel="true"
-                      logMessagesAtTransportLevel="true"/>
+      <messageLogging logKnownPii="true" logEntireMessage="true" logMalformedMessages="true" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true"/>
     </diagnostics>
   </system.serviceModel>
   <!-- Minimum needed for logging and STS (END) -->
   <startup>
-    <supportedRuntime sku=".NETFramework,Version=v4.5" version="v4.0"/>
+    <supportedRuntime sku=".NETFramework,Version=v4.7.2" version="v4.0"/>
   </startup>
   <!-- Added by "service-hok\src\main\resources\HelloWorld-Hok.wsdl" -->
   <!--<system.serviceModel>
