--- a/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
+++ b/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
@@ -16,8 +16,8 @@
     <!--Use this setting to target the combined server example-->
     <add key="AsEndpoint" value="https://digst.oioidws.rest.wsp:10002/accesstoken/issue"/>
     <add key="AudienceUri" value="https://wsp.oioidws-net.dk"/>
-    <add key="ClientCertificate" value="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5"/>
-    <add key="StsCertificate" value="d9f10c97aa647727adb64a349bb037c5c23c9a7a"/>
+    <add key="ClientCertificate" value="a402bb172929ae0d0ada62f6864329c35dc29483"/>
+    <add key="StsCertificate" value="fcb5edc9fb09cf39716c09c35fdc883bd48add8d"/>
     <add key="StsEndpointAddress" value="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc"/>
     <add key="TokenLifeTimeInSeconds" value="60"/>
     <add key="WspTestEndpointAddress" value="https://digst.oioidws.rest.wsp:10002/hello"/>
@@ -65,7 +65,7 @@
     </client>
   </system.serviceModel>
   <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.oioidws-net.dk">
-    <clientCertificate findValue="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <clientCertificate findValue="a402bb172929ae0d0ada62f6864329c35dc29483" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
     <stsCertificate findValue="d9 f1 0c 97 aa 64 77 27 ad b6 4a 34 9b b0 37 c5 c2 3c 9a 7a" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
   </oioIdwsWcfConfiguration>
   <oioIdwsLoggingConfiguration logger=""/>
@@ -80,7 +80,7 @@
   <Federation xmlns="urn:dk.nita.saml20.configuration">
     <SessionTimeout>30</SessionTimeout>
     <PreventOpenRedirectAttack>true</PreventOpenRedirectAttack>
-    <SigningCertificate findValue="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <SigningCertificate findValue="a402bb172929ae0d0ada62f6864329c35dc29483" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
     <AllowedAudienceUris>
       <Audience>https://saml.oiosaml-net.dk</Audience>
     </AllowedAudienceUris>
@@ -138,12 +138,20 @@
     </IDPEndPoints>
     <CommonDomain enabled="false" localReaderEndpoint="https://pfs04/demo/cdcreader.ashx"/>
   </SAML20Federation>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.7.2" />
+      </system.Web>
+  -->
   <system.web>
     <authentication mode="Forms">
       <forms cookieless="UseCookies" loginUrl="/login.ashx" name="DemoServiceProvider" timeout="30"/>
     </authentication>
     <sessionState mode="Off"/>
-    <compilation debug="true" targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.7.2"/>
     <customErrors mode="Off"/>
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
   </system.web>
