--- a/Tests/Digst.OioIdws.Rest.Server.Test/packages.config
+++ b/Tests/Digst.OioIdws.Rest.Server.Test/packages.config
@@ -4,6 +4,8 @@
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net452" />
+  <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net45" />
+  <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net452" />
