Updated WSP certificate and DNS name in examples and integrations tests.

--- a/Examples/Digst.OioIdws.Java/Digst.OioIdws.DotnetWscJavaWspExample/App.config
+++ b/Examples/Digst.OioIdws.Java/Digst.OioIdws.DotnetWscJavaWspExample/App.config
@@ -82,7 +82,7 @@
           <clientCredentials>
             <serviceCertificate>
               <scopedCertificates>
-                <!--<add findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" storeLocation="LocalMachine" storeName="My" targetUri="https://localhost:8443/HelloWorld/services/helloworld" x509FindType="FindByThumbprint"/>-->
+                <!--<add findValue="ca30025a4981147505b8d7a59052ac40c7033688" storeLocation="LocalMachine" storeName="My" targetUri="https://localhost:8443/HelloWorld/services/helloworld" x509FindType="FindByThumbprint"/>-->
                 <add findValue="85398FCF737FB76F554C6F2422CC39D3A35EC26F" storeLocation="LocalMachine" storeName="My" targetUri="https://localhost:8443/HelloWorld/services/helloworld" x509FindType="FindByThumbprint"/>
               </scopedCertificates>
             </serviceCertificate>
@@ -100,7 +100,7 @@
     <client>
       <endpoint address="https://localhost:8443/HelloWorld/services/helloworld" behaviorConfiguration="SoapBehaviourConfiguration" binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="HelloWorldProxy.HelloWorldPortType">
         <identity>
-          <!--<dns value="wsp.oioidws-net.dk TEST (funktionscertifikat)"/>-->
+          <!--<dns value="WSP (wsp.oioidws-net.dk TEST) (funktionscertifikat)"/>-->
           <dns value="eID JAVA test (funktionscertifikat)"/>
         </identity>
       </endpoint>
