--- a/Tests/Digst.OioIdws.Soap.Basic.Test/App.config
+++ b/Tests/Digst.OioIdws.Soap.Basic.Test/App.config
@@ -25,8 +25,8 @@
           <clientCredentials>
             <serviceCertificate>
               <scopedCertificates>
-                <!--HTTP:<add targetUri="http://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>-->
-                <add targetUri="https://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>
+                <!--HTTP:<add targetUri="http://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="ca30025a4981147505b8d7a59052ac40c7033688" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>-->
+                <add targetUri="https://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="ca30025a4981147505b8d7a59052ac40c7033688" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>
               </scopedCertificates>
             </serviceCertificate>
           </clientCredentials>
@@ -46,7 +46,7 @@
       <!--HTTP:<endpoint address="http://Digst.OioIdws.Wsp:9090/HelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="HelloWorldProxy.IHelloWorld">-->
       <endpoint address="https://Digst.OioIdws.Wsp:9090/HelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="HelloWorldProxy.IHelloWorld">
         <identity>
-          <dns value="wsp.oioidws-net.dk TEST (funktionscertifikat)"/>
+          <dns value="WSP (wsp.oioidws-net.dk TEST) (funktionscertifikat)"/>
         </identity>
       </endpoint>
     </client>
