--- a/Tests/Digst.OioIdws.Trust.TimeLongRunning.Test/App.config
+++ b/Tests/Digst.OioIdws.Trust.TimeLongRunning.Test/App.config
@@ -25,7 +25,7 @@
           <clientCredentials>
             <serviceCertificate>
               <scopedCertificates>
-                <add targetUri="http://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>
+                <add targetUri="http://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="ca30025a4981147505b8d7a59052ac40c7033688" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>
               </scopedCertificates>
             </serviceCertificate>
           </clientCredentials>
@@ -42,7 +42,7 @@
     <client>
       <endpoint address="http://Digst.OioIdws.Wsp:9090/HelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="HelloWorldProxy.IHelloWorld">
         <identity>
-          <dns value="wsp.oioidws-net.dk TEST (funktionscertifikat)"/>
+          <dns value="WSP (wsp.oioidws-net.dk TEST) (funktionscertifikat)"/>
         </identity>
       </endpoint>
     </client>
