NLRFIM-25 Fixing bootstrap configuration.

--- a/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
+++ b/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
@@ -52,7 +52,7 @@
     </behaviors>
     <bindings>
       <SoapBinding>
-        <binding name="SoapBindingConfiguration" useHttps="false"/>
+        <binding name="SoapBindingConfiguration" useHttps="true"/>
       </SoapBinding>
     </bindings>
     <client>
@@ -66,7 +66,7 @@
   </system.serviceModel>
   <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.oioidws-net.dk">
     <clientCertificate findValue="a402bb172929ae0d0ada62f6864329c35dc29483" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
-    <stsCertificate findValue="d9 f1 0c 97 aa 64 77 27 ad b6 4a 34 9b b0 37 c5 c2 3c 9a 7a" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <stsCertificate findValue="FCB5EDC9FB09CF39716C09C35FDC883BD48ADD8D" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
   </oioIdwsWcfConfiguration>
   <oioIdwsLoggingConfiguration logger=""/>
   <!-- OIOIDWS section stop -->
