NLRFIM-25 Bumping runtime to 4.7.2 for OS TLS behavior.

--- a/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
+++ b/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
@@ -154,6 +154,7 @@
     <compilation debug="true" targetFramework="4.7.2"/>
     <customErrors mode="Off"/>
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
+    <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <system.diagnostics>
     <trace autoflush="true"/>
