--- a/Source/Digst.OioIdws.Common/Digst.OioIdws.Common.csproj
+++ b/Source/Digst.OioIdws.Common/Digst.OioIdws.Common.csproj
@@ -45,9 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
-      <Link>Properties\CommonAssemblyInfo.cs</Link>
-    </Compile>
+    <Compile Include="CommonAssemblyInfo.cs" />
     <Compile Include="Constants\OioIdWsSoap.cs" />
     <Compile Include="Constants\OioWsTrust.cs" />
     <Compile Include="Constants\WsAdressing.cs" />
@@ -61,6 +59,7 @@
     <Compile Include="SoapFaults.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\build\PreBuild.targets.xml" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
