--- a/Source/Digst.OioIdws.OioWsTrust/Digst.OioIdws.OioWsTrust.csproj
+++ b/Source/Digst.OioIdws.OioWsTrust/Digst.OioIdws.OioWsTrust.csproj
@@ -48,9 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
-      <Link>Properties\CommonAssemblyInfo.cs</Link>
-    </Compile>
+    <Compile Include="CommonAssemblyInfo.cs" />
     <Compile Include="IStsTokenService.cs" />
     <Compile Include="ProtocolChannel\IOioWsTrustMessageTransformer.cs" />
     <Compile Include="ProtocolChannel\OioWsTrustBindingElement.cs" />
@@ -76,6 +74,7 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\build\PreBuild.targets.xml" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
