--- a/Source/Digst.OioIdws.Rest.Client/Digst.OioIdws.Rest.Client.csproj
+++ b/Source/Digst.OioIdws.Rest.Client/Digst.OioIdws.Rest.Client.csproj
@@ -50,9 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
-      <Link>Properties\CommonAssemblyInfo.cs</Link>
-    </Compile>
+    <Compile Include="CommonAssemblyInfo.cs" />
     <Compile Include="AccessToken\AccessToken.cs" />
     <Compile Include="AccessToken\IAccessTokenService.cs" />
     <Compile Include="AccessToken\AccessTokenService.cs" />
@@ -85,6 +83,7 @@
     <None Include="Release instructions.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\build\PreBuild.targets.xml" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
