--- a/Source/Digst.OioIdws.Rest.Common/Digst.OioIdws.Rest.Common.csproj
+++ b/Source/Digst.OioIdws.Rest.Common/Digst.OioIdws.Rest.Common.csproj
@@ -43,9 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
-      <Link>Properties\CommonAssemblyInfo.cs</Link>
-    </Compile>
+    <Compile Include="CommonAssemblyInfo.cs" />
     <Compile Include="AccessTokenType.cs" />
     <Compile Include="AccessTokenTypeParser.cs" />
     <Compile Include="AuthenticationErrorCodes.cs" />
@@ -53,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\build\PreBuild.targets.xml" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
