--- a/Source/Digst.OioIdws.Rest.Server/Digst.OioIdws.Rest.Server.csproj
+++ b/Source/Digst.OioIdws.Rest.Server/Digst.OioIdws.Rest.Server.csproj
@@ -59,9 +59,7 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
-      <Link>Properties\CommonAssemblyInfo.cs</Link>
-    </Compile>
+    <Compile Include="CommonAssemblyInfo.cs" />
     <Compile Include="AuthorizationServer\AccessTokenExpiredException.cs" />
     <Compile Include="AuthorizationServer\Issuing\AuthenticationPropertiesExtensions.cs" />
     <Compile Include="AuthorizationServer\OioIdwsAuthorizationServiceAppBuilderExtensions.cs" />
@@ -117,6 +115,7 @@
     <None Include="Release instructions.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\build\PreBuild.targets.xml" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
