--- a/Source/Digst.OioIdws.Soap/Digst.OioIdws.Soap.csproj
+++ b/Source/Digst.OioIdws.Soap/Digst.OioIdws.Soap.csproj
@@ -47,9 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
-      <Link>Properties\CommonAssemblyInfo.cs</Link>
-    </Compile>
+    <Compile Include="CommonAssemblyInfo.cs" />
     <Compile Include="Behaviors\SoapClientBehavior.cs" />
     <Compile Include="Behaviors\SoapClientBehaviorExtensionElement.cs" />
     <Compile Include="Behaviors\SoapServiceBehavior.cs" />
@@ -69,6 +67,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\build\PreBuild.targets.xml" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
