--- a/Source/Digst.OioIdws.Wsp.Wsdl/Digst.OioIdws.Wsp.Wsdl.csproj
+++ b/Source/Digst.OioIdws.Wsp.Wsdl/Digst.OioIdws.Wsp.Wsdl.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommonAssemblyInfo.cs" />
     <Compile Include="Bindings\Policies\Addressing\UsingAddressing.cs" />
     <Compile Include="Bindings\Policies\All.cs" />
     <Compile Include="Bindings\Policies\Common\RequestSecurityTokenTemplate.cs" />
@@ -111,4 +112,5 @@
     <Compile Include="WsdlExportExtension.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\build\PreBuild.targets.xml" />
 </Project>
