--- a/Source/Digst.OioIdws.Wsp/Digst.OioIdws.Wsp.csproj
+++ b/Source/Digst.OioIdws.Wsp/Digst.OioIdws.Wsp.csproj
@@ -45,9 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
-      <Link>Properties\CommonAssemblyInfo.cs</Link>
-    </Compile>
+    <Compile Include="CommonAssemblyInfo.cs" />
     <Compile Include="BasicPrivilegeProfile\BasicPrivilegeProfileModel2.cs">
       <DependentUpon>BasicPrivilegeProfileModel2.xsd</DependentUpon>
     </Compile>
@@ -90,6 +88,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\build\PreBuild.targets.xml" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
