--- a/Source/Digst.OioIdws.OioWsTrust/Digst.OioIdws.OioWsTrust.csproj
+++ b/Source/Digst.OioIdws.OioWsTrust/Digst.OioIdws.OioWsTrust.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.IdentityModel" />
     <Reference Include="System.Runtime.Caching" />
@@ -51,6 +52,10 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="InMemory\ILocalTokenService.cs" />
+    <Compile Include="InMemory\InMemoryLocalTokenService.cs" />
+    <Compile Include="InMemory\InMemoryLocalTokenServiceConfiguration.cs" />
+    <Compile Include="InMemory\InMemoryLocalTokenServiceConfigurationFactory.cs" />
     <Compile Include="IStsTokenService.cs" />
     <Compile Include="ProtocolChannel\IOioWsTrustMessageTransformer.cs" />
     <Compile Include="ProtocolChannel\OioWsTrustBindingElement.cs" />
@@ -69,12 +74,15 @@
     <Compile Include="Utils\XmlSignatureUtils.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Tests\Digst.OioIdws.Common.Utils\Digst.OioIdws.Common.Utils.csproj">
+      <Project>{17cd5683-886b-4856-82b0-25bd99172764}</Project>
+      <Name>Digst.OioIdws.Common.Utils</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Digst.OioIdws.Common\Digst.OioIdws.Common.csproj">
       <Project>{90c95503-cda6-46e1-91af-3a52d04dbcc3}</Project>
       <Name>Digst.OioIdws.Common</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
