NLRFIM-50 Moved ILocalTokenService back to example and duplicated some functionality instead. Improved configuration.

--- a/Tests/IntegrationTests/App.config
+++ b/Tests/IntegrationTests/App.config
@@ -8,7 +8,7 @@
         <add key="DotNetWspEntityID" value="https://wsp.oioidws-net.dk" />
         <add key="DotNetWspHostname" value="https://Digst.OioIdws.Wsp:9090/HelloWorld" />
         <add key="DotNetWspCertificatePath" value="Resources\\DotNet_WSP.p12" />
-        <add key="LocalTokenServiceSigningCertificateThumbprint" value="8081B09446A396BA0FF9B7159D07D8C90F7DB9AE" />
+        <add key="LocalTokenServiceSigningCertificatePath" value="Resources\\sts.oioidws-net.dk.p12" />
         <add key="LocalTokenServiceEntityId" value="https://sts.oioidws-net.dk" />
         <add key="NemLoginLocalTokenStsEntityId" value="https://local.sts.nemlog-in.dk/" />
     </appSettings>
