--- a/Examples/Digst.OioIdws.WscLocalTokenExample/Digst.OioIdws.WscLocalTokenExample.csproj
+++ b/Examples/Digst.OioIdws.WscLocalTokenExample/Digst.OioIdws.WscLocalTokenExample.csproj
@@ -52,6 +52,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="ILocalTokenService.cs" />
+    <Compile Include="InMemoryLocalTokenService.cs" />
+    <Compile Include="InMemoryLocalTokenServiceConfiguration.cs" />
+    <Compile Include="InMemoryLocalTokenServiceConfigurationFactory.cs" />
     <Compile Include="Log4NetLogger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
