--- a/Tests/IntegrationTests/IntegrationTests.csproj
+++ b/Tests/IntegrationTests/IntegrationTests.csproj
@@ -23,7 +23,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Examples\Digst.OioIdws.WscLocalTokenExample\Digst.OioIdws.WscLocalTokenExample.csproj" />
       <ProjectReference Include="..\..\Source\Digst.OioIdws.OioWsTrust\Digst.OioIdws.OioWsTrust.csproj" />
       <ProjectReference Include="..\..\Source\Digst.OioIdws.Wsc\Digst.OioIdws.Wsc.csproj" />
     </ItemGroup>
@@ -65,6 +64,10 @@
       </Content>
       <Content Include="..\..\Misc\Certificates\WSP (wsp.oioidws-net.dk TEST).p12">
         <Link>Resources\DotNet_WSP.p12</Link>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Include="..\..\Misc\Certificates\sts.oioidws-net.dk.p12">
+        <Link>Resources\sts.oioidws-net.dk.p12</Link>
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
