NLRFIM-30 BootstrapScenario WIP

--- a/Examples/Digst.Oioidws.WscBootstrapExample/Digst.Oioidws.WscBootstrapExample.csproj
+++ b/Examples/Digst.Oioidws.WscBootstrapExample/Digst.Oioidws.WscBootstrapExample.csproj
@@ -269,7 +269,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50793</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://localhost:20002</IISUrl>
+          <IISUrl>https://oiosaml-net.dk:20002/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
