--- a/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
+++ b/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
@@ -41,7 +41,7 @@
             <serviceCertificate>
               <scopedCertificates>
                 <!-- Certificate of WSP. Used for checking signature on response. targetURI must match the endpoint address. -->
-                <add findValue="ca30025a4981147505b8d7a59052ac40c7033688" storeLocation="LocalMachine" storeName="My" targetUri="http://127.0.0.1:9090/HelloWorld" x509FindType="FindByThumbprint"/>
+                <add findValue="ca30025a4981147505b8d7a59052ac40c7033688" storeLocation="LocalMachine" storeName="My" targetUri="https://Digst.OioIdws.Wsp:9090/HelloWorld" x509FindType="FindByThumbprint"/>
               </scopedCertificates>
             </serviceCertificate>
           </clientCredentials>
@@ -56,7 +56,7 @@
       </SoapBinding>
     </bindings>
     <client>
-      <endpoint address="http://127.0.0.1:9090/HelloWorld" binding="SoapBinding" contract="HelloWorldProxy.IHelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" bindingConfiguration="SoapBindingConfiguration">
+      <endpoint address="https://Digst.OioIdws.Wsp:9090/HelloWorld" binding="SoapBinding" contract="HelloWorldProxy.IHelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" bindingConfiguration="SoapBindingConfiguration">
         <identity>
           <!--Common name specified in certificate that identifies the WSP-->
           <dns value="WSP (wsp.oioidws-net.dk TEST) (funktionscertifikat)"/>
