feature/NLRFIM-30 Forced TLS12 when calling STS. Created BootstrapWsc configurations

--- a/Tests/IntegrationTests/App.config
+++ b/Tests/IntegrationTests/App.config
@@ -13,5 +13,7 @@
         <add key="DotNetRestWspEndpoint" value="https://Digst.OioIdws.Rest.Wsp:10002/" />
         <add key="DotNetSoapWspEndpoint" value="https://Digst.OioIdws.Wsp:9090/HelloWorld" />
         <add key="DotNetSoapWspCertificatePath" value="Resources\\DotNet_WSP.p12" />
+
+        <add key="DotNetBootstrapWscEndpoint" value="https://oiosaml-net.dk:20002/" />
     </appSettings>
 </configuration>
