NLRFIM-30 Adding TestBootstrapScenario for SOAP and REST

--- a/Tests/IntegrationTests/App.config
+++ b/Tests/IntegrationTests/App.config
@@ -14,6 +14,9 @@
         <add key="DotNetSoapWspEndpoint" value="https://Digst.OioIdws.Wsp:9090/HelloWorld" />
         <add key="DotNetSoapWspCertificatePath" value="Resources\\DotNet_WSP.p12" />
 
-        <add key="DotNetBootstrapWscEndpoint" value="https://oiosaml-net.dk:20002/" />
+        <!-- Direct URL to WSC login targeting DevTest4 Idp -->
+        <add key="DotNetBootstrapWscEndpoint" value="https://oiosaml-net.dk:20002/login.ashx?cidp=https%3a%2f%2fsaml.devtest4-nemlog-in.dk&amp;forceAuthn=False&amp;isPassive=False" />
+        <add key="DotNetBootstrapWscUsername" value="Tilo" />
+        <add key="DotNetBootstrapWscPassword" value="Test1234" />
     </appSettings>
 </configuration>
