--- a/Tests/IntegrationTests/App.config
+++ b/Tests/IntegrationTests/App.config
@@ -7,11 +7,17 @@
         <add key="TokenLifeTimeInMinutes" value="5" />
         <add key="LocalTokenServiceSigningCertificatePath" value="Resources\\sts.oioidws-net.dk.p12" />
         <add key="LocalTokenServiceEntityId" value="https://sts.oioidws-net.dk" />
-        <add key="DotNetRestAccessTokenIssuerEndpoint" value="https://digst.oioidws.rest.wsp:10002/accesstoken/issue" />
         
         <add key="DotNetWspEntityId" value="https://wsp.oioidws-net.dk" />
-        <add key="DotNetRestWspEndpoint" value="https://Digst.OioIdws.Rest.Wsp:10002/" />
+        <add key="DotNetRestWspEndpoint" value="https://Digst.OioIdws.Rest.Wsp:10002" />
+        <add key="DotNetRestWspTokenIssuanceEndpoint" value="https://digst.oioidws.rest.wsp:10002/accesstoken/issue" />
         <add key="DotNetSoapWspEndpoint" value="https://Digst.OioIdws.Wsp:9090/HelloWorld" />
         <add key="DotNetSoapWspCertificatePath" value="Resources\\DotNet_WSP.p12" />
+
+        <add key="JavaWspEntityId" value="https://wsp.itcrew.dk" />
+        <add key="JavaRestWspEndpoint" value="https://localhost:8443/api/hello" />
+        <add key="JavaRestWspTokenIssuanceEndpoint" value="https://localhost:8443/auth" />
+        <add key="JavaSoapWspEndpoint" value="https://localhost:8443/HelloWorld/services/helloworld" />
+        <add key="JavaSoapWspCertificatePath" value="Resources\\Java_WSP.pfx" />
     </appSettings>
 </configuration>
