NLRFIM-89 Adjusted nuspecs

--- a/Source/Digst.OioIdws.Rest.Server/Digst.OioIdws.Rest.Server.nuspec
+++ b/Source/Digst.OioIdws.Rest.Server/Digst.OioIdws.Rest.Server.nuspec
@@ -6,16 +6,17 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>http://www.mozilla.org/MPL/1.1/</licenseUrl>
-    <projectUrl>http://http://digitaliser.dk/resource/526486</projectUrl>
-    <iconUrl>https://github.com/digst/OIOIDWS.Net/tree/master/Source/Digst.OioIdws.Rest.Server/oiosaml_logo.png</iconUrl>
+    <projectUrl>http://digitaliser.dk/resource/526486</projectUrl>
+    <icon>images\oiosaml_logo.png</icon>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <license type="expression">MPL-1.1</license>
     <description>$description$</description>
     <releaseNotes>Initial version of Digst.OioIdws.Rest.Server. This version only supports signature case.</releaseNotes>
-    <copyright>Copyright 2015</copyright>
-    <tags>OIOIDWS REST AS WSP NEMLOGIN NEMLOG-IN</tags>
+    <copyright>$copyright$</copyright>
+    <tags>OIOIDWS REST WSP NEMLOGIN NEMLOG-IN</tags>
   </metadata>
   <files>
+    <file src="..\..\oiosaml_logo.png" target="images"/>
     <file src="readme.txt" target=""/>
   </files>
 </package>
