NLRFIM-46 Updating App.config

--- a/Tests/IntegrationTests/App.config
+++ b/Tests/IntegrationTests/App.config
@@ -20,7 +20,7 @@
         <add key="JavaSoapWspEndpoint" value="https://localhost:8443/HelloWorld/services/helloworld" />
         <add key="JavaSoapWspCertificatePath" value="Resources\\Java_WSP.pfx" />
 
-        <!-- Direct URL to WSC login targeting DevTest4 Idp -->
+        <!-- Direct URL to WSC login targeting IntTest Idp -->
         <add key="DotNetBootstrapWscEndpoint" value="https://oiosaml-net.dk:20002/login.ashx?cidp=https%3a%2f%2fsaml.test-nemlog-in.dk%2f&amp;forceAuthn=False&amp;isPassive=False" />
         <add key="DotNetBootstrapWscUsername" value="Tilo" />
         <add key="DotNetBootstrapWscPassword" value="Test1234" />
