NLRFIM-93 devtest 4 sts certificate and url - setup, demo and IT test update

--- a/Examples/Digst.OioIdws.Rest.Examples.Client/App.config
+++ b/Examples/Digst.OioIdws.Rest.Examples.Client/App.config
@@ -10,8 +10,8 @@
     <add key="AsEndpoint" value="https://digst.oioidws.rest.wsp:10002/accesstoken/issue"/>  
     <add key="AudienceUri" value="https://wsp.oioidws-net.dk"/>
     <add key="ClientCertificate" value="a402bb172929ae0d0ada62f6864329c35dc29483"/>
-    <add key="StsCertificate" value="fcb5edc9fb09cf39716c09c35fdc883bd48add8d"/>
-    <add key="StsEndpointAddress" value="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc"/>
+    <add key="StsCertificate" value="78b20a6d9000f29011063ba7b60ff66074076f48"/>
+    <add key="StsEndpointAddress" value="https://SecureTokenService.test-devtest4-nemlog-in.dk/SecurityTokenService.svc"/>
     <!--All values below 1 minute will result in a token life time of 8 hours from STS.-->
     <add key="TokenLifeTimeInSeconds" value="60"/>
     <add key="WspTestEndpointAddress" value="https://digst.oioidws.rest.wsp:10002/hello"/>
