--- a/Tests/IntegrationTests/App.config
+++ b/Tests/IntegrationTests/App.config
@@ -2,8 +2,8 @@
 <configuration>
     <appSettings>
         <add key="WscCertificatePath" value="Resources\\WSC.p12" />
-        <add key="StsEndpointAddress" value="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" />
-        <add key="StsCertificatePath" value="Resources\\IntTest_STS.cer" />
+        <add key="StsEndpointAddress" value="https://SecureTokenService.test-devtest4-nemlog-in.dk/SecurityTokenService.svc" />
+        <add key="StsCertificatePath" value="Resources\\DevTest4_STS.cer" />
         <add key="TokenLifeTimeInMinutes" value="5" />
         <add key="LocalTokenServiceSigningCertificatePath" value="Resources\\sts.oioidws-net.dk.p12" />
         <add key="LocalTokenServiceEntityId" value="https://sts.oioidws-net.dk" />
