--- a/Examples/Digst.OioIdws.Java/Digst.OioIdws.DotnetWscJavaWspExampleConfByCode/App.config
+++ b/Examples/Digst.OioIdws.Java/Digst.OioIdws.DotnetWscJavaWspExampleConfByCode/App.config
@@ -44,10 +44,10 @@
     </sharedListeners>
   </system.diagnostics>
   <!--<oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.oioidws-net.dk">-->
-  <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.itcrew.dk">
+  <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-devtest4-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.itcrew.dk">
     <!--<clientCertificate findValue="a402bb172929ae0d0ada62f6864329c35dc29483" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>-->
     <clientCertificate findValue="96A26BF6E07DE6DB74E356472CCA4776FEC9B0DA" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
-    <stsCertificate findValue="fcb5edc9fb09cf39716c09c35fdc883bd48add8d" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <stsCertificate findValue="78b20a6d9000f29011063ba7b60ff66074076f48" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
   </oioIdwsWcfConfiguration>
   <oioIdwsLoggingConfiguration logger="Digst.OioIdws.DotnetWscJavaWspExampleConfByCode.Log4NetLogger, Digst.OioIdws.DotnetWscJavaWspExampleConfByCode"/>
   <log4net>
