--- a/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
+++ b/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
@@ -130,7 +130,7 @@
     </RequestedAttributes>
     <NameIdFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIdFormat>
     <IDPEndPoints metadata="idp-metadata">
-      <add id="https://saml.test-nemlog-in.dk/">
+      <add id="https://saml.test-devtest4-nemlog-in.dk">
         <CertificateValidation>
           <add type="dk.nita.saml20.Specification.SelfIssuedCertificateSpecification, dk.nita.saml20"/>
         </CertificateValidation>
