--- a/Tests/IntegrationTests/App.config
+++ b/Tests/IntegrationTests/App.config
@@ -22,7 +22,7 @@
 
         <!-- Direct URL to WSC login targeting IntTest Idp -->
         <add key="DotNetBootstrapWscEndpoint" value="https://oiosaml-net.dk:20002/login.ashx?cidp=https%3a%2f%2fsaml.test-devtest4-nemlog-in.dk&amp;forceAuthn=False&amp;isPassive=False" />
-        <add key="DotNetBootstrapWscUsername" value="Otto9999" />
+        <add key="DotNetBootstrapWscUsername" value="Tilo" />
         <add key="DotNetBootstrapWscPassword" value="Test1234" />
     </appSettings>
 </configuration>
