NLRFIM-176: Updated to OCES III certificates

--- a/Examples/Digst.OioIdws.Rest.Examples.Client/App.config
+++ b/Examples/Digst.OioIdws.Rest.Examples.Client/App.config
@@ -5,12 +5,12 @@
     </startup>
   <appSettings>
     <!--Use this setting to target the seperate server example -->
-    <!--<add key="AsEndpoint" value="https://digst.oioidws.rest.as:10001/accesstoken/issue"/>--> 
+    <add key="AsEndpoint" value="https://digst.oioidws.rest.as:10001/accesstoken/issue"/> 
     <!--Use this setting to target the combined server example-->
-    <add key="AsEndpoint" value="https://digst.oioidws.rest.wsp:10002/accesstoken/issue"/>  
+    <!-- <add key="AsEndpoint" value="https://digst.oioidws.rest.wsp:10002/accesstoken/issue"/>   -->
     <add key="AudienceUri" value="https://wsp.oioidws-net.dk"/>
-    <add key="ClientCertificate" value="a402bb172929ae0d0ada62f6864329c35dc29483"/>
-    <add key="StsCertificate" value="78b20a6d9000f29011063ba7b60ff66074076f48"/>
+    <add key="ClientCertificate" value="8ba800bd54682d2b1d4713f41bf6698763f106e5"/>
+    <add key="StsCertificate" value="357faaab559e427fcf66bf81627378a86a1106c3"/>
     <add key="StsEndpointAddress" value="https://SecureTokenService.test-devtest4-nemlog-in.dk/SecurityTokenService.svc"/>
     <!--All values below 1 minute will result in a token life time of 8 hours from STS.-->
     <add key="TokenLifeTimeInSeconds" value="60"/>
