--- a/Examples/Digst.OioIdws.WscExample/App.config
+++ b/Examples/Digst.OioIdws.WscExample/App.config
@@ -52,8 +52,8 @@
     </sharedListeners>
   </system.diagnostics>
   <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-devtest4-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.oioidws-net.dk">
-    <clientCertificate findValue="a402bb172929ae0d0ada62f6864329c35dc29483" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
-    <stsCertificate findValue="78b20a6d9000f29011063ba7b60ff66074076f48" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <clientCertificate findValue="8ba800bd54682d2b1d4713f41bf6698763f106e5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <stsCertificate findValue="357faaab559e427fcf66bf81627378a86a1106c3" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
   </oioIdwsWcfConfiguration>
   <oioIdwsLoggingConfiguration logger="Digst.OioIdws.WscExample.Log4NetLogger, Digst.OioIdws.WscExample"/>
   <startup>
@@ -77,7 +77,7 @@
           <clientCredentials>
             <serviceCertificate>
               <scopedCertificates>
-                <add findValue="ca30025a4981147505b8d7a59052ac40c7033688" storeLocation="LocalMachine" storeName="My" targetUri="https://Digst.OioIdws.Wsp:9090/HelloWorld" x509FindType="FindByThumbprint"/>
+                <add findValue="d738a7d146f07e02c16cf28dac11e742e4ce9582" storeLocation="LocalMachine" storeName="My" targetUri="https://Digst.OioIdws.Wsp:9090/HelloWorld" x509FindType="FindByThumbprint"/>
               </scopedCertificates>
             </serviceCertificate>
           </clientCredentials>
@@ -96,7 +96,7 @@
       <!--HTTP:<endpoint address="http://Digst.OioIdws.Wsp:9090/HelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="HelloWorldProxy.IHelloWorld">-->
       <endpoint address="https://Digst.OioIdws.Wsp:9090/HelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="HelloWorldProxy.IHelloWorld">
         <identity>
-          <dns value="WSP (wsp.oioidws-net.dk TEST) (funktionscertifikat)"/>
+          <dns value="OIOIDWS.NET WSP - Test"/>
         </identity>
       </endpoint>
     </client>
