--- a/Tests/Digst.OioIdws.Soap.TimeLongRunning.Test/App.config
+++ b/Tests/Digst.OioIdws.Soap.TimeLongRunning.Test/App.config
@@ -3,9 +3,9 @@
   <configSections>
     <section name="oioIdwsWcfConfiguration" type="Digst.OioIdws.Wsc.OioWsTrust.Configuration, Digst.OioIdws.Wsc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
   </configSections>
-  <oioIdwsWcfConfiguration stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" wspEndpointID="https://wsp.oioidws-net.dk" tokenLifeTimeInMinutes="5" debugMode="true">
-    <clientCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" findValue="a402bb172929ae0d0ada62f6864329c35dc29483"/>
-    <stsCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" findValue="fcb5edc9fb09cf39716c09c35fdc883bd48add8d"/>
+  <oioIdwsWcfConfiguration stsEndpointAddress="https://SecureTokenService.test-devtest4-nemlog-in.dk/SecurityTokenService.svc" wspEndpointID="https://wsp.oioidws-net.dk" tokenLifeTimeInMinutes="5" debugMode="true">
+    <clientCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" findValue="8ba800bd54682d2b1d4713f41bf6698763f106e5"/>
+    <stsCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" findValue="357faaab559e427fcf66bf81627378a86a1106c3"/>
   </oioIdwsWcfConfiguration>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
@@ -25,8 +25,8 @@
           <clientCredentials>
             <serviceCertificate>
               <scopedCertificates>
-                <!--HTTP:<add targetUri="http://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="ca30025a4981147505b8d7a59052ac40c7033688" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>-->
-                <add targetUri="https://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="ca30025a4981147505b8d7a59052ac40c7033688" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>
+                <!--HTTP:<add targetUri="http://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="d738a7d146f07e02c16cf28dac11e742e4ce9582" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>-->
+                <add targetUri="https://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="d738a7d146f07e02c16cf28dac11e742e4ce9582" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>
               </scopedCertificates>
             </serviceCertificate>
           </clientCredentials>
@@ -45,7 +45,7 @@
       <!--HTTP:<endpoint address="http://Digst.OioIdws.Wsp:9090/HelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="HelloWorldProxy.IHelloWorld">-->
       <endpoint address="https://Digst.OioIdws.Wsp:9090/HelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="HelloWorldProxy.IHelloWorld">
         <identity>
-          <dns value="WSP (wsp.oioidws-net.dk TEST) (funktionscertifikat)"/>
+          <dns value="OIOIDWS.NET WSP - Test"/>
         </identity>
       </endpoint>
     </client>
