--- a/Examples/Digst.OioIdws.WscExampleNuGet/App.config
+++ b/Examples/Digst.OioIdws.WscExampleNuGet/App.config
@@ -24,7 +24,7 @@
             <serviceCertificate>
               <scopedCertificates>
                 <!-- Certificate of WSP. Used for checking signature on response. targetURI must match the endpoint address. -->
-                <add findValue="ca30025a4981147505b8d7a59052ac40c7033688" storeLocation="LocalMachine" storeName="My" targetUri="http://127.0.0.1:9091/HelloWorld" x509FindType="FindByThumbprint"/>
+                <add findValue="d738a7d146f07e02c16cf28dac11e742e4ce9582" storeLocation="LocalMachine" storeName="My" targetUri="https://Digst.OioIdws.Wsp:9091/HelloWorld" x509FindType="FindByThumbprint"/>
               </scopedCertificates>
             </serviceCertificate>
           </clientCredentials>
@@ -39,17 +39,17 @@
       </SoapBinding>
     </bindings>
     <client>
-      <endpoint address="http://127.0.0.1:9091/HelloWorld" binding="SoapBinding" contract="HelloWorldProxy.IHelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" bindingConfiguration="SoapBindingConfiguration">
+      <endpoint address="https://Digst.OioIdws.Wsp:9091/HelloWorld" binding="SoapBinding" contract="HelloWorldProxy.IHelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" bindingConfiguration="SoapBindingConfiguration">
         <identity>
           <!--Common name specified in certificate that identifies the WSP-->
-          <dns value="WSP (wsp.oioidws-net.dk TEST) (funktionscertifikat)"/>
+          <dns value="OIOIDWS.NET WSP - Test"/>
         </identity>
       </endpoint>
     </client>
   </system.serviceModel>
   <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-devtest4-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.oioidws-net.dk">
-    <clientCertificate findValue="a402bb172929ae0d0ada62f6864329c35dc29483" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
-    <stsCertificate findValue="78b20a6d9000f29011063ba7b60ff66074076f48" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <clientCertificate findValue="8ba800bd54682d2b1d4713f41bf6698763f106e5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <stsCertificate findValue="357faaab559e427fcf66bf81627378a86a1106c3" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
   </oioIdwsWcfConfiguration>
   <oioIdwsLoggingConfiguration logger="Digst.OioIdws.WscExampleNuGet.Log4NetLogger, Digst.OioIdws.WscExampleNuGet"/>
   <log4net>
