--- a/Examples/Digst.OioIdws.WscLocalTokenExample/App.config
+++ b/Examples/Digst.OioIdws.WscLocalTokenExample/App.config
@@ -8,7 +8,7 @@
 	</configSections>
 
 	<appSettings>
-		<add key="LocalTokenServiceSigningCertificateThumbprint" value="8081B09446A396BA0FF9B7159D07D8C90F7DB9AE" />
+		<add key="LocalTokenServiceSigningCertificateThumbprint" value="85e477ebb3f9e5af7c1564baf2aa6a98d6797872" />
 		<add key="LocalTokenServiceEntityId" value="https://sts.oioidws-net.dk" />
 		<add key="NemLoginLocalTokenStsEntityId" value="https://local.sts.nemlog-in.dk/" />
 	</appSettings>
@@ -62,8 +62,8 @@
 	</system.diagnostics>
 
 	<oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-devtest4-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.oioidws-net.dk">
-		<clientCertificate findValue="a402bb172929ae0d0ada62f6864329c35dc29483" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
-		<stsCertificate findValue="78b20a6d9000f29011063ba7b60ff66074076f48" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+		<clientCertificate findValue="8ba800bd54682d2b1d4713f41bf6698763f106e5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+		<stsCertificate findValue="357faaab559e427fcf66bf81627378a86a1106c3" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
 	</oioIdwsWcfConfiguration>
 
 	<oioIdwsLoggingConfiguration logger="Digst.OioIdws.WscLocalTokenExample.Log4NetLogger, Digst.OioIdws.WscLocalTokenExample"/>
@@ -103,7 +103,7 @@
 					<clientCredentials>
 						<serviceCertificate>
 							<scopedCertificates>
-								<add findValue="ca30025a4981147505b8d7a59052ac40c7033688" storeLocation="LocalMachine" storeName="My" targetUri="https://digst.oioidws.wsp:9090/HelloWorld" x509FindType="FindByThumbprint"/>
+								<add findValue="d738a7d146f07e02c16cf28dac11e742e4ce9582" storeLocation="LocalMachine" storeName="My" targetUri="https://digst.oioidws.wsp:9090/HelloWorld" x509FindType="FindByThumbprint"/>
 							</scopedCertificates>
 						</serviceCertificate>
 					</clientCredentials>
@@ -122,7 +122,7 @@
 			<endpoint address="https://digst.oioidws.wsp:9090/HelloWorld"
 			          binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="HelloWorldProxy.IHelloWorld" name="SoapBinding_IHelloWorld" behaviorConfiguration="SoapBehaviourConfiguration">
 				<identity>
-					<dns value="WSP (wsp.oioidws-net.dk TEST) (funktionscertifikat)" />
+					<dns value="OIOIDWS.NET WSP - Test" />
 				</identity>
 			</endpoint>
 		</client>
