--- a/Examples/Digst.OioIdws.WspExample/App.config
+++ b/Examples/Digst.OioIdws.WspExample/App.config
@@ -75,7 +75,7 @@
           <!--Setting useIdentityConfiguration to true enables WIF (System.IdentityModel configuration) and ensures that the specified service certificate is also used as decrypting key for decrypting the encrypted SAML assertion.-->
           <!--Setting useIdentityConfiguration to true in a service behavior did not work because it happens too late in the pipe line and the service certificate would not be set to be the decrypting key-->
           <serviceCredentials useIdentityConfiguration="true">
-            <serviceCertificate findValue="ca30025a4981147505b8d7a59052ac40c7033688" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+            <serviceCertificate findValue="d738a7d146f07e02c16cf28dac11e742e4ce9582" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
           </serviceCredentials>
         </behavior>
       </serviceBehaviors>
@@ -105,7 +105,7 @@
       <!--Issuer certificate is embedded in the encrypted SAML assertion. Hence, it it does not need to be recieved out-of-band and placed in the certificate store-->
       <issuerNameRegistry>
         <trustedIssuers>
-          <add name="Digitaliseringsstyrelsen - NemLog-in Test" thumbprint="78b20a6d9000f29011063ba7b60ff66074076f48"/>
+          <add name="NemLog-in IdP - Test" thumbprint="357faaab559e427fcf66bf81627378a86a1106c3"/>
         </trustedIssuers>
       </issuerNameRegistry>
       <!--The Saml2SecurityTokenHandler security token handler must be replacded by a custom that handles that the signing certificate reference is the id of the encrypted assertion-->
