--- a/Examples/Digst.OioIdws.WspExampleNuGet/App.config
+++ b/Examples/Digst.OioIdws.WspExampleNuGet/App.config
@@ -41,12 +41,7 @@
     </bindings>
     <services>
       <service behaviorConfiguration="SoapServiceBehaviourConfiguration" name="Digst.OioIdws.WspExampleNuGet.HelloWorld">
-        <endpoint address="http://127.0.0.1:9091/HelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="Digst.OioIdws.WspExampleNuGet.IHelloWorld"/>
-      </service>
-      <service name="{REQUIRED}" behaviorConfiguration="SoapServiceBehaviourConfiguration">
-        <!-- address is the endpint at which the service listens to incoming requests, contract is the full name of the interface which the service must implement. -->
-        <endpoint address="{REQUIRED}" binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="{REQUIRED}" behaviorConfiguration="SoapBehaviourConfiguration">
-        </endpoint>
+        <endpoint address="https://Digst.OioIdws.Wsp:9091/HelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" binding="SoapBinding" bindingConfiguration="SoapBindingConfiguration" contract="Digst.OioIdws.WspExampleNuGet.IHelloWorld"/>
       </service>
     </services>
     <extensions>
@@ -72,7 +67,7 @@
           <!--Setting useIdentityConfiguration to true in a service behavior did not work because it happens too late in the pipe line and the service certificate would not be set to be the decrypting key-->
           <!--WIF is also needed in order to support STR transformations when signing and validating signatures. -->
           <serviceCredentials useIdentityConfiguration="true">
-            <serviceCertificate findValue="ca30025a4981147505b8d7a59052ac40c7033688" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+            <serviceCertificate findValue="d738a7d146f07e02c16cf28dac11e742e4ce9582" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
           </serviceCredentials>
         </behavior>
       </serviceBehaviors>
@@ -84,14 +79,12 @@
       <!--audienceUris specifies this service and is used to check that the SAML token from NemLog-in STS is indeed issued to this service.-->
       <audienceUris>
         <add value="https://wsp.oioidws-net.dk"/>
-        <add value="{REQUIRED}"/>
       </audienceUris>
       <!--issuerNameRegistry specifies the certificate of the Nemlog-In STS. Both thumbprint and Common Name must be specified.-->
       <!--Issuer certificate is embedded in the encrypted SAML assertion. Hence, it it does not need to be recieved out-of-band and placed in the certificate store-->
       <issuerNameRegistry>
         <trustedIssuers>
-          <add name="Digitaliseringsstyrelsen - NemLog-in Test" thumbprint="78b20a6d9000f29011063ba7b60ff66074076f48"/>
-          <add thumbprint="{REQUIRED}" name="{REQUIRED}"/>
+          <add name="NemLog-in IdP - Test" thumbprint="357faaab559e427fcf66bf81627378a86a1106c3"/>
         </trustedIssuers>
       </issuerNameRegistry>
       <!--The Saml2SecurityTokenHandler security token handler must be replacded by a custom that handles that the signing certificate reference is the id of the encrypted assertion-->
