--- a/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
+++ b/Examples/Digst.Oioidws.WscBootstrapExample/Web.config
@@ -16,8 +16,8 @@
     <!--Use this setting to target the combined server example-->
     <add key="AsEndpoint" value="https://digst.oioidws.rest.wsp:10002/accesstoken/issue"/>
     <add key="AudienceUri" value="https://wsp.oioidws-net.dk"/>
-    <add key="ClientCertificate" value="a402bb172929ae0d0ada62f6864329c35dc29483"/>
-    <add key="StsCertificate" value="78b20a6d9000f29011063ba7b60ff66074076f48"/>
+    <add key="ClientCertificate" value="8ba800bd54682d2b1d4713f41bf6698763f106e5"/>
+    <add key="StsCertificate" value="357faaab559e427fcf66bf81627378a86a1106c3"/>
     <add key="StsEndpointAddress" value="https://SecureTokenService.test-devtest4-nemlog-in.dk/SecurityTokenService.svc"/>
     <add key="TokenLifeTimeInSeconds" value="60"/>
     <add key="WspTestEndpointAddress" value="https://digst.oioidws.rest.wsp:10002/hello"/>
@@ -41,7 +41,7 @@
             <serviceCertificate>
               <scopedCertificates>
                 <!-- Certificate of WSP. Used for checking signature on response. targetURI must match the endpoint address. -->
-                <add findValue="ca30025a4981147505b8d7a59052ac40c7033688" storeLocation="LocalMachine" storeName="My" targetUri="https://Digst.OioIdws.Wsp:9090/HelloWorld" x509FindType="FindByThumbprint"/>
+                <add findValue="d738a7d146f07e02c16cf28dac11e742e4ce9582" storeLocation="LocalMachine" storeName="My" targetUri="https://Digst.OioIdws.Wsp:9090/HelloWorld" x509FindType="FindByThumbprint"/>
               </scopedCertificates>
             </serviceCertificate>
           </clientCredentials>
@@ -59,14 +59,14 @@
       <endpoint address="https://Digst.OioIdws.Wsp:9090/HelloWorld" binding="SoapBinding" contract="HelloWorldProxy.IHelloWorld" behaviorConfiguration="SoapBehaviourConfiguration" bindingConfiguration="SoapBindingConfiguration">
         <identity>
           <!--Common name specified in certificate that identifies the WSP-->
-          <dns value="WSP (wsp.oioidws-net.dk TEST) (funktionscertifikat)"/>
+          <dns value="OIOIDWS.NET WSP - Test"/>
         </identity>
       </endpoint>
     </client>
   </system.serviceModel>
   <oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-devtest4-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.oioidws-net.dk">
-    <clientCertificate findValue="a402bb172929ae0d0ada62f6864329c35dc29483" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
-    <stsCertificate findValue="78b20a6d9000f29011063ba7b60ff66074076f48" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <clientCertificate findValue="8ba800bd54682d2b1d4713f41bf6698763f106e5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <stsCertificate findValue="357faaab559e427fcf66bf81627378a86a1106c3" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
   </oioIdwsWcfConfiguration>
   <oioIdwsLoggingConfiguration logger=""/>
   <!-- OIOIDWS section stop -->
@@ -80,7 +80,7 @@
   <Federation xmlns="urn:dk.nita.saml20.configuration">
     <SessionTimeout>30</SessionTimeout>
     <PreventOpenRedirectAttack>true</PreventOpenRedirectAttack>
-    <SigningCertificate findValue="a402bb172929ae0d0ada62f6864329c35dc29483" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+    <SigningCertificate findValue="8ba800bd54682d2b1d4713f41bf6698763f106e5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
     <AllowedAudienceUris>
       <Audience>https://saml.oiosaml-net.dk</Audience>
     </AllowedAudienceUris>
